Firebase Token Authentication (#12)
* firebase auth

* firebase auth

* firebase auth
